--- a/ImageProcessing/ImageProcessing/ImageProcessing.vcxproj.filters
+++ b/ImageProcessing/ImageProcessing/ImageProcessing.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="Rect_class.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Trackbar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
