--- a/ImageProcessing/ImageProcessing/ImageProcessing.vcxproj
+++ b/ImageProcessing/ImageProcessing/ImageProcessing.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ImageFileRead.cpp" />
     <ClCompile Include="Rect_class.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
