--- a/ImageProcessing/ImageProcessing/ImageProcessing.vcxproj.filters
+++ b/ImageProcessing/ImageProcessing/ImageProcessing.vcxproj.filters
@@ -27,5 +27,17 @@
     <ClCompile Include="ImageFileRead.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Homework03.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Homework04.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Homework02.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Homework01.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
