--- a/ImageProcessing/Homework0421/Homework0421.vcxproj.filters
+++ b/ImageProcessing/Homework0421/Homework0421.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClCompile Include="Homework02_1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Homework03_1.cpp">
+    <ClCompile Include="Homework.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
